# nftgen

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  doc.md  exceptions.json  main.cpp  nfts_template.json  settings.json
corekit/: exceptions.hpp
doc/: doc.md
scripts/: create_tables.sql
src/: plots.py
src/database/: DbGlobal.cpp  db_connection.cpp  db_connection.h  db_global.h
src/exceptions/: BaseExceptionProcessors.hpp  DirectoriesExceptionsProcessor.hpp  IExceptionProcessor.hpp  TraitExceptionsProcessors.hpp  base_trait_exception_processor.hpp  exception.hpp  factories.hpp  trait_exception_processors.hpp  traitdirs_exception_processors.hpp
src/models/: IExceptionProcessor.hpp  NFTTemplateMetadata.cpp  NFTTemplateMetadata.h  Rarities.hpp  exceptions.hpp  nft_template.cpp  nft_template.hpp  trait.cpp  trait.h  trait.hpp  traitfolder.cpp  traitfolder.h  traitfolder.hpp
src/workflow/: calculator.hpp  filemanager.hpp  generator.cpp  generator.hpp  logger.hpp  settings.cpp  settings.hpp  stringutilities.cpp  stringutilities.hpp
